--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "mongoose": "^8.1.2",
     "node-fetch": "^3.3.2",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "telegraf": "^4.15.3"
   }
 }
